--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "next": "16.1.6",
     "next-intl": "^4.8.3",
     "react": "19.2.3",
